# udp_docker

./: CMakeLists.txt  LICENSE  README.md  docker-compose.yml
client/: CMakeLists.txt  Dockerfile
client/inc/: paket.hpp  udp_client.hpp
client/src/: main.cpp  test.cpp  udp_client.cpp
client/test/: test_client.cpp
server/: CMakeLists.txt  Dockerfile
server/inc/: paket.hpp  udp_server.hpp
server/src/: main.cpp  test.cpp  udp_server.cpp
server/test/: test_server.cpp
